--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sass": "^2.2.0",
     "gulp-sass-lint": "^1.3.4",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-svg-sprite": "^1.4.0",
     "gulp-uglify": "^3.0.0",
     "js-cookie": "^2.2.0",
     "normalize-scss": "^7.0.1",
